# egoroff.spb.ru

./: .clinerules  .dockerignore  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  DockerfileArm64  README.md  apache.go  apache_common_elem.xsl  apache_manualpage.xsl  apache_module.xsl  app.yaml  auth.py  bower.json  build.py  config.py  cron.yaml  docker.sh  dos.yaml  go.mod  go.sum  gulpfile.coffee  ifaces.go  index.yaml  justfile  main.go  main.py  make_local.sh  model.go  model.py  modelx.py  package-lock.json  package.json  requirements.txt  run.py  site_map.py  sonar-project.properties  static.go  tests.py  (+5 more)
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pr.yml
apache/: apache_common_elem.xsl  apache_manualpage.xsl  apache_module.xsl  config.json  entities.dtd  messages.xml  mod_proxy.xml  mod_proxy_connect.xml  mod_proxy_ftp.xml  mod_proxy_http.xml  mod_rewrite.xml  rewriteguide.xml
apache/css/: apache.css  common.css
app/: admin.go  apache.go  api.go  auth.go  blog.go  compatibility.go  conn.go  context.go  download.go  filer.go  graph.go  graph_test.go  ifaces.go  model.go  portfolio.go  profile.go  repository.go  search.go  sitemap.go  static.go  util.go  welcome.go  xml2html.go  xml2html_test.go
app/auth/: auth.go  domain.go  init.go  util.go
app/auth/facebook/: facebook.go
app/auth/github/: github.go
app/auth/google/: google.go
app/auth/indie/: authorization.go  indie.go  token.go
app/auth/oauth/: domain.go  oauth.go
app/blog/: blog.go  htmlParser.go  typograph.go  xml2html.go  xml2html_test.go
app/db/: adaptor.go  conn.go  fileWriter.go  parse.go  parse_test.go  poster.go  repository.go
app/domain/: datastore.go  model.go  model_test.go
app/framework/: auth.go  context.go  error.go  graph.go  graph_test.go  util.go
app/lib/: filer.go  util.go
app/micropub/: endpoint.go  get.go  ifaces.go  json.go  media.go  post.go  store.go  util.go  util_test.go
app/txt/: htmlParser.go  htmlParser_test.go  typograph.go
apps/api/: __init__.py
apps/api/v1/: forms.py  models.py  views.py
apps/api/v2/: views.py
apps/compatibility/: __init__.py  views.py
apps/file/: models.py  views.py
apps/file/admin/: views.py
apps/news/: models.py  views.py
apps/news/admin/: forms.py  views.py
apps/opinions/: views.py
apps/portfolio/: views.py
apps/utils/: blobstore.py  paginator.py
apps/utils/blobstore_handlers/: __init__.py
common/: messages.xml
css/: apache.css  common.css
egoroff/: Cargo.toml
egoroff/.cargo/: config.toml
egoroff/egoroff/: Cargo.toml
egoroff/egoroff/src/: main.rs
egoroff/egoroff/src/cli/: migrate.rs  mod.rs  server.rs
egoroff/kernel/: Cargo.toml
egoroff/kernel/src/: archive.rs  converter.rs  domain.rs  graph.rs  lib.rs  resource.rs  session.rs  sqlite.rs  typograph.rs  xml.rs
egoroff/migrate/: Cargo.toml
egoroff/migrate/src/: lib.rs
egoroff/server/: Cargo.toml  askama.toml
egoroff/server/src/: atom.rs  auth.rs  body.rs  domain.rs  handlers.rs  indie.rs  lib.rs  micropub.rs  rest.rs  sitemap.rs
egoroff/server/src/handlers/: admin.rs  auth.rs  blog.rs  indie.rs  micropub.rs  mod.rs  portfolio.rs  search.rs  template.rs
main/: admin.py  app.yaml  auth.py  config.py  context.py  cron.yaml  dos.yaml  main.py  site_map.py  tests.py  typographus.py  units.py  util.py
main/apache/: apache_common_elem.xsl  config.json  mod_proxy_connect.xml  mod_rewrite.xml
main/apps/api/: utils.py
main/apps/compatibility/: views.py
main/apps/compressinja/: __init__.py  html.py
main/apps/file/: models.py  views.py
main/apps/news/: models.py  views.py
main/apps/portfolio/: models.py  views.py
main/apps/utils/: wtf.py
main/model/: base.py  config.py
main/static_/: robots.txt
main/static_/lib/: jquery.mosaic.js  knockout-3.2.0.debug.js  knockout.mapping-latest.debug.js  redactor.js
main/templates/: base.html  error.html  feedback.html  profile.html  search.html  signin.html  sitemap.html  welcome.html
main/templates/admin/: base.html  config_update.html  custom_search.html  top_bar.html
main/templates/bit/: analytics.html  breadcrumbs.html  contact_menu.html  disqus.html  footer.html  header.html  script.html  search.html  social.html  style.html  top_nav.html  user_menu.html
main/templates/macro/: forms.html
main/templates_/: profile.html  search.html  user_list.html
main/templates_/admin/: top_bar.html
static/: map.json  robots.txt
static/css/: jquery-ui-1.10.3.custom.min.css
static/lib/: jquery.dateFormat-1.0.js  news.async.reader.js
templates/: admin.html  apache.html  base.html  error.html  feedback.html  index.html  main.html  news.html  opinions.html  page.html  portfolio.html  profile.html  search.html  signin.html  sitemap.html  user_list.html  welcome.html
templates/admin/: base.html  config_update.html  top_bar.html
templates/api/: index.html
templates/bit/: analytics.html  announcement.html  big_banner.html  breadcrumbs.html  contact_menu.html  disqus.html  footer.html  form_textarea_field.html  header.html  more_posts.html  notifications.html  script.html  search.html  sidebar.html  small_banner.html  social.html  style.html  top_bar.html  top_nav.html  user_menu.html
templates/blog/: archive.html  blog_model.html  index.html  paginator.html  post.html  post_box.html  tags.html
templates/macro/: forms.html  utils.html
templates/portfolio/: apache.html  apache_documents_list.html  downloads.html  index.html
templates/user/: user_list.html  user_merge.html  user_update.html
ui/: build.html  bun.lockb  eslint.config.js  eslint.config.mts  package-lock.json  package.json  shims-bootstrap.d.ts  tsconfig.json  vite.config.ts  vue.config.js
ui/public/: admin.html  error.html  index.html  index_r.html  profile.html  search.html  signin.html  welcome.html  welcome_r.html
ui/scripts/: eslint-ts6-alias.cjs  inject-askama-assets.ts  vue-tsc-ts6.cjs
ui/src/: AdminApp.vue  App.scss  App.vue  Syntax.scss  blogMount.ts  events.ts  main.ts  shims-tsx.d.ts  shims-vue.d.ts  shims-vue3-highlightjs.d.ts  util.ts  vue-progressbar.d.ts
(+212 files in other folders)
