[workspace]
members = [
  # core
  "egoroff",
  "kernel",
  "server",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to be able to run with `cargo run`, `check` and so on without selecting a specific package with `-p`
default-members = [
  "egoroff",
]

[profile.release]
lto = true
debug = false
debug-assertions = false
codegen-units = 1