[workspace]
resolver = "2"
members = [
  "egoroff",
  "kernel",
  "server",
  "migrate",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to be able to run with `cargo run`, `check` and so on without selecting a specific package with `-p`
default-members = [
  "egoroff",
]

[profile.release]
lto = true
strip = true
panic = 'abort'

[workspace.dependencies]
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7.8", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
utoipa = { version = "3.5.0", default-features = false }
chrono = { version="0.4.29", default-features = false }
reqwest = { version = "0.11", default-features = false }
anyhow = "1.0"
futures = "0.3"
url = "2.4.1"
