[workspace]
resolver = "3"
members = ["egoroff", "kernel", "server", "migrate"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to be able to run with `cargo run`, `check` and so on without selecting a specific package with `-p`
default-members = ["egoroff"]

[profile.release]
lto = true
strip = true
panic = 'abort'

[workspace.dependencies]
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7.18", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
utoipa = { version = "5.4.0", default-features = false }
chrono = { version = "0.4.42", default-features = false }
reqwest = { version = "0.13.1", default-features = false }
hyper-util = { version = "0.1.19", default-features = false }
tower-sessions = "0.14.0"
async-trait = "0.1"
anyhow = "1.0"
futures = "0.3"
url = "2.5.7"

[workspace.lints.rust]
unsafe_code = "forbid"
