[package]
name = "egoroff"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
server = { path = "../server" }
migrate = { path = "../migrate", optional = true }
clap = { version = "4.5.7", features = ["std", "color", "suggestions", "cargo"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[features]
migrating = ["migrate"]

[lints]
workspace = true
