[package]
name = "egoroff"
version = "0.1.0"
edition = "2024"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
server = { path = "../server" }
migrate = { path = "../migrate", optional = true }
clap = { version = "4.5.40", features = ["std", "color", "suggestions", "cargo"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "=0.1.47"

[features]
migrating = ["migrate"]

[lints]
workspace = true
