[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock", "std"]}
time = { version = "0.3.44", features = ["serde"] }
rmp-serde = { version = "1.3.0" }
lol_html = "2.7.0"
regex = "1.12.2"
quick-xml = "0.38.4"
pulldown-cmark = "0.13.0"
anyhow = { workspace = true }
itertools = "0.14.0"
tower-sessions = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22.1"
url = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true, features = ["chrono", "time"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }

[dev-dependencies]
rstest = "0.26.1"

[lints]
workspace = true
