[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock", "std"]}
time = { version = "0.3.53", features = ["serde"] }
rmp-serde = { version = "1.3.1" }
lol_html = "3.0.0"
regex = "1.13.1"
quick-xml = "0.41.0"
pulldown-cmark = "0.13.4"
anyhow = { workspace = true }
itertools = "0.15.0"
tower-sessions = { workspace = true }
async-trait = { workspace = true }
base64 = "0.23.0"
url = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true, features = ["chrono", "time"] }
rusqlite = { version = "0.40", features = ["bundled", "chrono"] }
scraper = "0.27.0"

[dev-dependencies]
rstest = "0.26.1"

[lints]
workspace = true
