[package]
name = "server"
version = "0.1.0"
edition = "2021"
workspace = ".."
license = "MIT"
description = "egoroff.spb.ru server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mime_guess = "2"
axum = { version = "0.6.20", features = ["multipart", "http2", "headers"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
axum-sessions = "0.5.0"
axum-login = "0.5.0"
tokio-util = { workspace = true, features = ["full"] }
futures = { workspace = true }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4", features = ["add-extension", "trace", "cors", "limit", "compression-gzip", "validate-request", "auth"] }
tera = "1.19.0"
rust-embed = { version = "6", features = ["include-exclude"] }
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["serde", "clock", "std"]}
oauth2 = {version= "4.4.1", features = ["reqwest"] }
async-trait = "0.1"
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
eyre = "0.6.8"
lazy_static = "1.4.0"
jsonwebtoken = "8.3.0"
url = { workspace = true }
thiserror = "1.0.44"
utoipa = { workspace = true, features = ["chrono", "time", "axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
rand = { version = "0.8.5", features = ["min_const_gen"] }
uuid = { version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
human_bytes = "0.4.2"

[dev-dependencies]
rstest = "0.18.2"