[package]
name = "server"
version = "0.1.0"
edition = "2021"
workspace = ".."
license = "MIT"
description = "egoroff.spb.ru server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mime_guess = "2"
axum = { version = "0.7.7", features = ["multipart", "http2"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tower-sessions = { workspace = true }
axum-login = "0.16.0"
tokio-util = { workspace = true, features = ["full"] }
futures = { workspace = true }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["add-extension", "trace", "cors", "limit", "compression-gzip", "validate-request", "auth"] }
askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess", "config", "humansize", "num-traits", "urlencode"] }
askama_derive = "0.12.5"
askama_axum = "0.4.0"
rust-embed = { version = "8", features = ["include-exclude"] }
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["serde", "clock", "std"]}
oauth2 = {version= "4.4.2", features = ["reqwest"] }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls-tls" ] }
lazy_static = "1.5.0"
jsonwebtoken = "9.3.0"
url = { workspace = true }
thiserror = "1.0.64"
utoipa = { workspace = true, features = ["chrono", "time", "axum_extras"] }
utoipa-swagger-ui = { version = "=8.0.3", features = ["axum"] }
rand = { version = "0.8.5", features = ["min_const_gen"] }
uuid = { version = "1.11.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
hyper = { version = "1.5.0", features = [] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "http1"] }

[dev-dependencies]
rstest = "0.23.0"

[lints]
workspace = true

[build-dependencies]
hyper-util = { workspace = true, features = ["http2"] }
