[package]
name = "server"
version = "0.1.0"
edition = "2024"
workspace = ".."
license = "MIT"
description = "egoroff.spb.ru server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mime_guess = "2"
axum = { version = "0.8.6", features = ["multipart", "http2"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
tower-sessions = { workspace = true }
axum-login = "0.18.0"
axum-prometheus = "0.9.0"
tokio-util = { workspace = true, features = ["full"] }
futures = { workspace = true }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["add-extension", "trace", "cors", "limit", "compression-gzip", "validate-request", "auth"] }
askama = { version = "0.14.0", default-features = false, features = ["config", "alloc", "derive"] }
rust-embed = { version = "8", features = ["include-exclude"] }
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["serde", "clock", "std"]}
oauth2 = {version= "5.0.0", features = ["reqwest"] }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls-tls" ] }
jsonwebtoken = { version = "10.1.0", features = [ "rust_crypto" ]}
url = { workspace = true }
thiserror = "2.0.17"
utoipa = { workspace = true, features = ["chrono", "time", "axum_extras"] }
utoipa-swagger-ui = { version = "=9.0.2", features = ["axum"] }
rand = { version = "0.9.2" }
uuid = { version = "1.18.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
hyper = { version = "1.7.0", features = [] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "http1"] }
unicase = "2.8.1"

[dev-dependencies]
rstest = "0.26.1"

[lints]
workspace = true

[build-dependencies]
hyper-util = { workspace = true, features = ["http2"] }
